[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Manager.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Pointer.gd" type="Script" id=2]
[ext_resource path="res://Tileset/Color selector.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=4]
[ext_resource path="res://Tileset/Background.tres" type="TileSet" id=5]
[ext_resource path="res://Tileset/Pointer.tres" type="TileSet" id=6]
[ext_resource path="res://Scripts/ColorPicker.gd" type="Script" id=7]
[ext_resource path="res://Scripts/TestBackGround.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Blocks.gd" type="Script" id=9]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Button_Font.tres" type="DynamicFont" id=11]
[ext_resource path="res://Tileset/Block.tres" type="TileSet" id=12]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 10 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Editor" type="Node2D" parent="."]

[node name="Background" type="TileMap" parent="Editor"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0 )

[node name="Grid" type="TileMap" parent="Editor"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 4 )

[node name="ColorPicker" type="TileMap" parent="Editor"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 720897, 0, 0, 720898, 1, 0, 720899, 2, 0, 720900, 3, 0, 720901, 4, 0, 720903, 10, 0, 720904, 11, 0, 786433, 5, 0, 786434, 6, 0, 786435, 7, 0, 786436, 8, 0, 786437, 9, 0 )
script = ExtResource( 7 )

[node name="Pointer" type="TileMap" parent="Editor"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 2 )

[node name="UI" type="Node2D" parent="Editor"]

[node name="Clear" type="Button" parent="Editor/UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = 460.0
margin_right = 96.0
margin_bottom = 485.0
custom_fonts/font = ExtResource( 11 )
text = "CLEAR"

[node name="Save" type="Button" parent="Editor/UI"]
margin_left = 385.0
margin_top = 124.0
margin_right = 485.0
margin_bottom = 149.0
rect_pivot_offset = Vector2( 62, 25 )
custom_fonts/font = ExtResource( 11 )
text = "SAVE"

[node name="LoadFromFile" type="Button" parent="Editor/UI"]
margin_left = 385.0
margin_top = 251.0
margin_right = 485.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 62, 25 )
custom_fonts/font = ExtResource( 11 )
text = "Load levels"

[node name="LevelSelector" type="OptionButton" parent="Editor/UI"]
margin_left = 385.0
margin_top = 293.0
margin_right = 485.0
margin_bottom = 318.0
custom_fonts/font = ExtResource( 11 )

[node name="Level" type="TextEdit" parent="Editor/UI"]
margin_left = 383.0
margin_top = 65.0
margin_right = 483.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 11 )

[node name="Label" type="Label" parent="Editor/UI"]
margin_left = 332.0
margin_top = 68.0
margin_right = 374.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 11 )
text = "Level: "

[node name="Overwrite" type="CheckBox" parent="Editor/UI"]
margin_left = 378.0
margin_top = 95.0
margin_right = 469.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 11 )
text = "Overwrite"

[node name="Label2" type="Label" parent="Editor/UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 282.0
margin_top = 680.0
margin_right = 698.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 11 )
text = "Open save file: Project > Open Project Data Folder"

[node name="Test" type="Button" parent="Editor/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 385.0
margin_top = 640.0
margin_right = 485.0
margin_bottom = 665.0
custom_fonts/font = ExtResource( 11 )
text = "Test"

[node name="Tester" type="Node2D" parent="."]
visible = false

[node name="TestBackGround" type="TileMap" parent="Tester"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 65536, 0, 0, 65545, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131081, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196617, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262153, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327689, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393225, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 458752, 0, 0, 458761, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 524288, 0, 0, 524297, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0 )
script = ExtResource( 8 )

[node name="Blocks" type="TileMap" parent="Tester"]
tile_set = ExtResource( 12 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 9 )

[node name="UI" type="Node2D" parent="Tester"]

[node name="Edit" type="Button" parent="Tester/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 385.0
margin_top = 640.0
margin_right = 485.0
margin_bottom = 665.0
custom_fonts/font = ExtResource( 11 )
text = "Edit"

[node name="Start" type="Button" parent="Tester/UI"]
margin_left = 385.0
margin_top = 554.0
margin_right = 485.0
margin_bottom = 601.0
custom_fonts/font = ExtResource( 11 )
text = "START"

[node name="Clock" type="Label" parent="Tester/UI"]
margin_left = 512.0
margin_top = 559.0
margin_right = 676.0
margin_bottom = 632.0
custom_fonts/font = SubResource( 1 )
text = "Press Start or move a block to start
"

[connection signal="pressed" from="Editor/UI/Clear" to="Editor/Grid" method="_on_Button_clear_pressed"]
[connection signal="pressed" from="Editor/UI/Save" to="Editor/Grid" method="_on_Save_pressed"]
[connection signal="pressed" from="Editor/UI/LoadFromFile" to="Editor/Grid" method="_on_LoadFromFile_pressed"]
[connection signal="item_selected" from="Editor/UI/LevelSelector" to="Editor/Grid" method="_on_LevelSelector_item_selected"]
[connection signal="text_changed" from="Editor/UI/Level" to="Editor/Grid" method="_on_Level_text_changed"]
[connection signal="toggled" from="Editor/UI/Overwrite" to="Editor/Grid" method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Editor/UI/Test" to="." method="_on_Test_pressed"]
[connection signal="pressed" from="Tester/UI/Edit" to="." method="_on_Edit_pressed"]
[connection signal="button_up" from="Tester/UI/Start" to="Tester/Blocks" method="_on_Start_button_up"]
